[end-points] replace guard with authorize in currency routes. Little change in docs
